dev version - metric

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -290,13 +290,14 @@
     "    num_epochs=10,\n",
     "    callbacks={\n",
     "        \"criterion\": CriterionCallback(), \n",
-    "        \"accuracy\": AccuracyCallback(), \n",
+    "        \"accuracy\": MetricCallback(metric=AccuracyMetric(), input_key=\"targets\", output_key=\"logits\"), \n",
     "        \"optimizer\": OptimizerCallback(), \n",
     "        \"scheduler\": SchedulerCallback(),\n",
+    "#         \"verbose\": VerboseCallback(),\n",
     "    },\n",
     "    loggers={\n",
     "#         \"console\": ConsoleLogger(exclude=[\"batch\", \"global_batch\", \"loader\", \"global_epoch\"]),\n",
-    "        \"console\": ConsoleLogger(include=[\"epoch\"]),\n",
+    "        \"console\": ConsoleLogger(include=[\"loader\"]),\n",
     "    }\n",
     ")\n",
     "\n",
