dev version - engine

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -301,7 +301,7 @@
     "        \"optimizer\": OptimizerCallback(), \n",
     "        \"scheduler\": SchedulerCallback(),\n",
     "#         \"verbose\": VerboseCallback(),\n",
-    "        \"top-n-epochs\": TopNMetricHandlerCallback(\n",
+    "        \"checkpoint\": CheckpointCallback(# TopNMetricHandlerCallback(\n",
     "            loader_key=\"valid\", metric_key=\"auc\", \n",
     "            minimize=False, save_n_best=3\n",
     "        ),\n",
@@ -327,6 +327,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "collapsed": true,
     "pycharm": {
      "name": "#%% md\n"
     }
