--- a/demo.ipynb
+++ b/demo.ipynb
@@ -135,7 +135,8 @@
     "    plt.scatter(X[:, 0], X[:, 1], c=y, s=40, cmap=plt.cm.Spectral)\n",
     "    plt.xlim(xx.min(), xx.max())\n",
     "    plt.ylim(yy.min(), yy.max())\n",
-    "    plt.show()"
+    "    plt.show()\n",
+    "    return fig"
    ]
   },
   {
@@ -144,7 +145,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "visualize_decision_boundary(X_valid, y_valid, model)"
+    "_ = visualize_decision_boundary(X_valid, y_valid, model)"
    ]
   },
   {
@@ -224,11 +225,11 @@
     "            total_loss.backward()\n",
     "\n",
     "            # update (sgd)\n",
-    "            learning_rate = 1.0 - 0.9 * self.stage_epoch / self.stage_len\n",
+    "            learning_rate = 1.0 - 0.9 * self.stage_epoch_step / self.stage_epoch_len\n",
     "            for p in self.model.parameters():\n",
     "                p.data -= learning_rate * p.grad\n",
     "\n",
-    "CustomRunner().run_experiment(experiment)"
+    "CustomRunner().run(experiment)"
    ]
   },
   {
@@ -237,7 +238,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "visualize_decision_boundary(X_valid, y_valid, model)"
+    "_ = visualize_decision_boundary(X_valid, y_valid, model)"
    ]
   },
   {
@@ -307,12 +308,12 @@
     "        ),\n",
     "    },\n",
     "    loggers={\n",
-    "#         \"console\": ConsoleLogger(exclude=[\"batch\", \"global_batch\", \"loader\", \"global_epoch\"]),\n",
-    "        \"console\": ConsoleLogger(include=[\"loader\"]),\n",
+    "        \"console\": ConsoleLogger(),\n",
+    "        \"csv\": LogdirLogger(logdir=\"./logdir\"),\n",
     "    }\n",
     ")\n",
     "\n",
-    "SupervisedRunner().run_experiment(experiment)"
+    "SupervisedRunner().run(experiment)"
    ]
   },
   {
@@ -321,7 +322,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "visualize_decision_boundary(X_valid, y_valid, model)"
+    "_ = visualize_decision_boundary(X_valid, y_valid, model)"
    ]
   },
   {
@@ -353,30 +354,58 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class CustomExperiment(Experiment):\n",
+    "import io\n",
+    "import cv2\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "def get_img_from_fig(fig, dpi=180):\n",
+    "    buf = io.BytesIO()\n",
+    "    fig.savefig(buf, format=\"png\", dpi=dpi)\n",
+    "    buf.seek(0)\n",
+    "    img_arr = np.frombuffer(buf.getvalue(), dtype=np.uint8)\n",
+    "    buf.close()\n",
+    "    img = cv2.imdecode(img_arr, 1)\n",
+    "    img = cv2.cvtColor(img, cv2.COLOR_BGR2RGB)\n",
+    "    return img"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "class CustomExperiment(SingleStageExperiment):\n",
     "    @property\n",
     "    def stages(self):\n",
     "        return self._stage\n",
     "\n",
-    "    def get_loaders(self, stage: str):\n",
+    "    def get_data(self, stage: str):\n",
     "        return self._loaders[stage]\n",
     "\n",
     "    \n",
-    "class VisualizationCallback(Callback):\n",
-    "    def on_stage_end(self, runner):\n",
-    "        visualize_decision_boundary(X_valid, y_valid, runner.model)\n",
+    "class VisualizationCallback(ICallback):\n",
+    "    def on_epoch_end(self, runner):\n",
+    "        img = visualize_decision_boundary(X_valid, y_valid, runner.model)\n",
+    "        img = get_img_from_fig(img)\n",
+    "        runner.log_image(img, scope=\"epoch\")\n",
     "\n",
     "\n",
     "loaders = {\n",
-    "    \"loader_1\": {\n",
+    "    \"stage_1\": {\n",
     "        \"train_1\": MicroLoader(X_train, y_train), \n",
     "        \"valid\": MicroLoader(X_valid, y_valid), \n",
     "    },\n",
-    "    \"loader_2\": {\n",
+    "    \"stage_2\": {\n",
     "        \"train_2\": MicroLoader(X_train2, y_train2), \n",
     "        \"valid\": MicroLoader(X_valid, y_valid), \n",
     "    },\n",
     "}\n",
+    "stages = loaders.keys()\n",
+    "\n",
     "model = MLP(2, [16, 16, 1])\n",
     "criterion = MicroCriterion()\n",
     "optimizer = MicroOptimizer(model)\n",
@@ -387,20 +416,36 @@
     "    optimizer=optimizer, \n",
     "    scheduler=scheduler,\n",
     "    loaders=loaders, \n",
-    "    num_epochs=10,\n",
-    "    callbacks=[\n",
-    "        CriterionCallback(), \n",
-    "        AccuracyCallback(), \n",
-    "        OptimizerCallback(), \n",
-    "        SchedulerCallback(),\n",
-    "        LoggerCallback(),\n",
-    "        VisualizationCallback(),  # <-- here is our new Callback\n",
-    "    ],\n",
-    "    verbose=False,\n",
-    "    stage=loaders.keys()  # <-- here is the trick for multi-stage support\n",
+    "    num_epochs=4,\n",
+    "    callbacks={\n",
+    "        \"criterion\": CriterionCallback(), \n",
+    "        \"accuracy\": MetricCallback(\n",
+    "            metric=AccuracyMetric(), compute_on_batch=True,\n",
+    "            input_key=\"targets\", output_key=\"logits\"\n",
+    "        ),\n",
+    "        \"auc\": MetricCallback(\n",
+    "            metric=AUCMetric(), compute_on_batch=False,\n",
+    "            input_key=\"targets\", output_key=\"logits\"\n",
+    "        ), \n",
+    "        \"optimizer\": OptimizerCallback(), \n",
+    "        \"scheduler\": SchedulerCallback(),\n",
+    "    #         \"verbose\": VerboseCallback(),\n",
+    "        \"checkpoint\": CheckpointCallback(# TopNMetricHandlerCallback(\n",
+    "            loader_key=\"valid\", metric_key=\"auc\", \n",
+    "            minimize=False, save_n_best=3\n",
+    "        ),\n",
+    "        \"visualization\": VisualizationCallback(),\n",
+    "        \n",
+    "    },\n",
+    "    loggers={\n",
+    "#         \"console\": ConsoleLogger(exclude=[\"batch\", \"global_batch\", \"loader\", \"global_epoch\"]),\n",
+    "        \"console\": ConsoleLogger(),\n",
+    "        \"csv\": LogdirLogger(logdir=\"./logdir2\"),\n",
+    "    },\n",
+    "    stage=stages  # <-- here is the trick for multi-stage support\n",
     ")\n",
     "\n",
-    "SupervisedRunner().run_experiment(experiment)"
+    "SupervisedRunner().run(experiment)"
    ]
   },
   {
@@ -413,7 +458,7 @@
    },
    "outputs": [],
    "source": [
-    "visualize_decision_boundary(X_valid, y_valid, model)"
+    "_ = visualize_decision_boundary(X_valid, y_valid, model)"
    ]
   },
   {
