dev - optuna intro

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ! pip install micrograd==0.1.0 scikit-learn>=0.20 optuna"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -302,9 +311,13 @@
     "        \"optimizer\": OptimizerCallback(), \n",
     "        \"scheduler\": SchedulerCallback(),\n",
     "#         \"verbose\": VerboseCallback(),\n",
-    "        \"checkpoint\": CheckpointCallback(# TopNMetricHandlerCallback(\n",
+    "        \"checkpoint1\": CheckpointCallback(# TopNMetricHandlerCallback(\n",
     "            loader_key=\"valid\", metric_key=\"auc\", \n",
     "            minimize=False, save_n_best=3\n",
+    "        ),\n",
+    "        \"checkpoint2\": CheckpointCallback(# TopNMetricHandlerCallback(\n",
+    "            loader_key=\"valid\", metric_key=\"loss_mean\", \n",
+    "            minimize=True, save_n_best=1\n",
     "        ),\n",
     "    },\n",
     "    loggers={\n",
@@ -459,6 +472,86 @@
    "outputs": [],
    "source": [
     "_ = visualize_decision_boundary(X_valid, y_valid, model)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Act 4 - integration with hyperparameter search"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "from datetime import datetime\n",
+    "import optuna    \n",
+    "\n",
+    "def objective(trial):\n",
+    "    num_epochs = 50\n",
+    "    l2_alpha = trial.suggest_loguniform(\"lr\", 1e-5, 1e-2)\n",
+    "    num_hidden1 = int(trial.suggest_loguniform(\"num_hidden1\", 2, 16))\n",
+    "    num_hidden2 = int(trial.suggest_loguniform(\"num_hidden2\", 2, 16))\n",
+    "\n",
+    "    model = MLP(2, [num_hidden1, num_hidden2, 1])\n",
+    "    criterion = MicroCriterion()\n",
+    "    optimizer = MicroOptimizer(model)\n",
+    "    scheduler = MicroScheduler(optimizer, num_epochs=num_epochs)\n",
+    "\n",
+    "    experiment = SingleStageExperiment(\n",
+    "        model=model, \n",
+    "        criterion=criterion, \n",
+    "        optimizer=optimizer, \n",
+    "        scheduler=scheduler,\n",
+    "        loaders=loaders, \n",
+    "        num_epochs=num_epochs,\n",
+    "        callbacks={\n",
+    "            \"criterion\": CriterionCallback(alpha=l2_alpha), \n",
+    "            \"accuracy\": MetricCallback(\n",
+    "                metric=AccuracyMetric(), compute_on_batch=True,\n",
+    "                input_key=\"targets\", output_key=\"logits\"\n",
+    "            ),\n",
+    "            \"auc\": MetricCallback(\n",
+    "                metric=AUCMetric(), compute_on_batch=False,\n",
+    "                input_key=\"targets\", output_key=\"logits\"\n",
+    "            ), \n",
+    "            \"optimizer\": OptimizerCallback(), \n",
+    "            \"scheduler\": SchedulerCallback(),\n",
+    "    #         \"verbose\": VerboseCallback(),\n",
+    "            \"checkpoint\": CheckpointCallback(# TopNMetricHandlerCallback(\n",
+    "                loader_key=\"valid\", metric_key=\"auc\", \n",
+    "                minimize=False, save_n_best=1,\n",
+    "            ),\n",
+    "            \"optuna\": OptunaPruningCallback(loader_key=\"valid\", metric_key=\"auc\")\n",
+    "        },\n",
+    "        loggers={\n",
+    "            \"console\": ConsoleLogger(),\n",
+    "            \"csv\": LogdirLogger(logdir=f\"./logdir/{datetime.now().strftime('%Y%m%d-%H%M%S')}\"),\n",
+    "        },\n",
+    "        trial=trial,\n",
+    "#         hparams={\"l2_alpha\": l2_alpha, \"num_hidden1\": num_hidden1, \"num_hidden2\": num_hidden2},\n",
+    "    )\n",
+    "\n",
+    "    runner = SupervisedRunner()\n",
+    "    runner.run(experiment)\n",
+    "    score = runner.callbacks[\"checkpoint\"].top_best_metrics[0][0]\n",
+    "    \n",
+    "    return score\n",
+    "\n",
+    "study = optuna.create_study(\n",
+    "    direction=\"maximize\",\n",
+    "#     direction=\"minimize\",\n",
+    "    pruner=optuna.pruners.MedianPruner(\n",
+    "        n_startup_trials=0, n_warmup_steps=0, interval_steps=1\n",
+    "    ),\n",
+    ")\n",
+    "study.optimize(objective, n_trials=5, timeout=300)\n",
+    "print(study.best_value, study.best_params)"
    ]
   },
   {
