dev - batch update

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -310,7 +310,6 @@
     "        ), \n",
     "        \"optimizer\": OptimizerCallback(), \n",
     "        \"scheduler\": SchedulerCallback(),\n",
-    "#         \"verbose\": VerboseCallback(),\n",
     "        \"checkpoint1\": CheckpointCallback(# TopNMetricHandlerCallback(\n",
     "            loader_key=\"valid\", metric_key=\"auc\", \n",
     "            minimize=False, save_n_best=3\n",
@@ -319,6 +318,7 @@
     "            loader_key=\"valid\", metric_key=\"loss_mean\", \n",
     "            minimize=True, save_n_best=1\n",
     "        ),\n",
+    "        \"verbose\": VerboseCallback(),\n",
     "    },\n",
     "    loggers={\n",
     "        \"console\": ConsoleLogger(),\n",
@@ -442,12 +442,13 @@
     "        ), \n",
     "        \"optimizer\": OptimizerCallback(), \n",
     "        \"scheduler\": SchedulerCallback(),\n",
-    "    #         \"verbose\": VerboseCallback(),\n",
+    "            \n",
     "        \"checkpoint\": CheckpointCallback(# TopNMetricHandlerCallback(\n",
     "            loader_key=\"valid\", metric_key=\"auc\", \n",
     "            minimize=False, save_n_best=3\n",
     "        ),\n",
     "        \"visualization\": VisualizationCallback(),\n",
+    "#         \"verbose\": VerboseCallback(),\n",
     "        \n",
     "    },\n",
     "    loggers={\n",
@@ -497,6 +498,12 @@
     "    l2_alpha = trial.suggest_loguniform(\"lr\", 1e-5, 1e-2)\n",
     "    num_hidden1 = int(trial.suggest_loguniform(\"num_hidden1\", 2, 16))\n",
     "    num_hidden2 = int(trial.suggest_loguniform(\"num_hidden2\", 2, 16))\n",
+    "    \n",
+    "    loaders = {\n",
+    "        \"train_1\": MicroLoader(X_train, y_train), \n",
+    "        \"train_2\": MicroLoader(X_train2, y_train2), \n",
+    "        \"valid\": MicroLoader(X_valid, y_valid), \n",
+    "    }\n",
     "\n",
     "    model = MLP(2, [num_hidden1, num_hidden2, 1])\n",
     "    criterion = MicroCriterion()\n",
