--- a/demo.ipynb
+++ b/demo.ipynb
@@ -210,7 +210,7 @@
     "model = MLP(2, [16, 16, 1])\n",
     "experiment = SingleStageExperiment(model=model, loaders=loaders, num_epochs=10)\n",
     "\n",
-    "class CustomRunner(IRunner):\n",
+    "class CustomRunner(IStageBasedRunner):\n",
     "    def _handle_batch(self, batch):\n",
     "        features, targets = batch\n",
     "        scores = list(map(self.model, features))\n",
@@ -494,7 +494,7 @@
     "import optuna    \n",
     "\n",
     "def objective(trial):\n",
-    "    num_epochs = 50\n",
+    "    num_epochs = 2\n",
     "    l2_alpha = trial.suggest_loguniform(\"lr\", 1e-5, 1e-2)\n",
     "    num_hidden1 = int(trial.suggest_loguniform(\"num_hidden1\", 2, 16))\n",
     "    num_hidden2 = int(trial.suggest_loguniform(\"num_hidden2\", 2, 16))\n",
