dev - custom exp

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -60,6 +60,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from typing import *\n",
     "from kittylyst import *"
    ]
   },
@@ -559,6 +560,131 @@
     ")\n",
     "study.optimize(objective, n_trials=5, timeout=300)\n",
     "print(study.best_value, study.best_params)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Act 5 - fully custom experiment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "class CustomExperiment(IExperiment):\n",
+    "    @property\n",
+    "    def seed(self) -> int:\n",
+    "        return 73\n",
+    "\n",
+    "    @property\n",
+    "    def name(self) -> str:\n",
+    "        # @TODO: auto-generate name?\n",
+    "        return \"experiment73\"\n",
+    "\n",
+    "    @property\n",
+    "    def hparams(self) -> Dict:\n",
+    "        return {}\n",
+    "\n",
+    "    @property\n",
+    "    def stages(self) -> List[str]:\n",
+    "        return [\"stage_1\", \"stage_2\"]\n",
+    "\n",
+    "    def get_stage_params(self, stage: str) -> Dict[str, Any]:\n",
+    "        if stage == \"stage_1\":\n",
+    "            return {\n",
+    "                \"num_epochs\": 10,\n",
+    "                \"migrate_from_previous_stage\": False,\n",
+    "            }\n",
+    "        elif stage == \"stage_2\":\n",
+    "            return {\n",
+    "                \"num_epochs\": 6,\n",
+    "                \"migrate_from_previous_stage\": False,\n",
+    "            }\n",
+    "        else:\n",
+    "            raise NotImplemented()\n",
+    "\n",
+    "    def get_data(self, stage: str) -> Dict[str, Any]:\n",
+    "        if stage == \"stage_1\":\n",
+    "            return {\n",
+    "                \"train_1\": MicroLoader(X_train, y_train), \n",
+    "                \"valid\": MicroLoader(X_valid, y_valid), \n",
+    "            }\n",
+    "        elif stage == \"stage_2\":\n",
+    "            return {\n",
+    "                \"train_2\": MicroLoader(X_train2, y_train2), \n",
+    "                \"valid\": MicroLoader(X_valid, y_valid), \n",
+    "            }\n",
+    "        else:\n",
+    "            raise NotImplemented()\n",
+    "\n",
+    "    def get_model(self, stage: str):\n",
+    "        return MLP(2, [16, 16, 1])\n",
+    "\n",
+    "    def get_criterion(self, stage: str):\n",
+    "        return MicroCriterion()\n",
+    "\n",
+    "    def get_optimizer(self, stage: str, model):\n",
+    "        if stage == \"stage_1\":\n",
+    "            return MicroOptimizer(model, lr=1e-3)\n",
+    "        elif stage == \"stage_2\":\n",
+    "            return MicroOptimizer(model, lr=1e-4)\n",
+    "        else:\n",
+    "            raise NotImplemented()\n",
+    "\n",
+    "    def get_scheduler(self, stage: str, optimizer):\n",
+    "        if stage == \"stage_1\":\n",
+    "            return MicroScheduler(optimizer, num_epochs=10)\n",
+    "        elif stage == \"stage_2\":\n",
+    "            return MicroScheduler(optimizer, num_epochs=6)\n",
+    "        else:\n",
+    "            raise NotImplemented()\n",
+    "        \n",
+    "\n",
+    "    def get_callbacks(self, stage: str) -> Dict[str, ICallback]:\n",
+    "        return {\n",
+    "            \"criterion\": CriterionCallback(), \n",
+    "            \"accuracy\": MetricCallback(\n",
+    "                metric=AccuracyMetric(), compute_on_batch=True,\n",
+    "                input_key=\"targets\", output_key=\"logits\"\n",
+    "            ),\n",
+    "            \"auc\": MetricCallback(\n",
+    "                metric=AUCMetric(), compute_on_batch=False,\n",
+    "                input_key=\"targets\", output_key=\"logits\"\n",
+    "            ), \n",
+    "            \"optimizer\": OptimizerCallback(), \n",
+    "            \"scheduler\": SchedulerCallback(),\n",
+    "            \"checkpoint1\": CheckpointCallback(# TopNMetricHandlerCallback(\n",
+    "                loader_key=\"valid\", metric_key=\"auc\", \n",
+    "                minimize=False, save_n_best=3\n",
+    "            ),\n",
+    "            \"checkpoint2\": CheckpointCallback(# TopNMetricHandlerCallback(\n",
+    "                loader_key=\"valid\", metric_key=\"loss_mean\", \n",
+    "                minimize=True, save_n_best=1\n",
+    "            ),\n",
+    "            \"verbose\": VerboseCallback(),\n",
+    "        }\n",
+    "\n",
+    "    def get_engine(self) -> IEngine:\n",
+    "        return Engine()\n",
+    "\n",
+    "    def get_trial(self) -> ITrial:\n",
+    "        return Trial()\n",
+    "\n",
+    "    def get_loggers(self) -> Dict[str, ILogger]:\n",
+    "        return {\n",
+    "            \"console\": ConsoleLogger(),\n",
+    "            \"csv\": LogdirLogger(logdir=\"./logdir5\"),\n",
+    "        }\n",
+    "\n",
+    "\n",
+    "experiment = CustomExperiment()\n",
+    "SupervisedRunner().run(experiment)"
    ]
   },
   {
