dev - custom exp

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -599,12 +599,12 @@
     "        if stage == \"stage_1\":\n",
     "            return {\n",
     "                \"num_epochs\": 10,\n",
-    "                \"migrate_from_previous_stage\": False,\n",
+    "                \"migrate_model_from_previous_stage\": False,\n",
     "            }\n",
     "        elif stage == \"stage_2\":\n",
     "            return {\n",
     "                \"num_epochs\": 6,\n",
-    "                \"migrate_from_previous_stage\": False,\n",
+    "                \"migrate_model_from_previous_stage\": True,\n",
     "            }\n",
     "        else:\n",
     "            raise NotImplemented()\n",
@@ -647,28 +647,37 @@
     "        \n",
     "\n",
     "    def get_callbacks(self, stage: str) -> Dict[str, ICallback]:\n",
-    "        return {\n",
-    "            \"criterion\": CriterionCallback(), \n",
-    "            \"accuracy\": MetricCallback(\n",
-    "                metric=AccuracyMetric(), compute_on_batch=True,\n",
-    "                input_key=\"targets\", output_key=\"logits\"\n",
-    "            ),\n",
-    "            \"auc\": MetricCallback(\n",
-    "                metric=AUCMetric(), compute_on_batch=False,\n",
-    "                input_key=\"targets\", output_key=\"logits\"\n",
-    "            ), \n",
-    "            \"optimizer\": OptimizerCallback(), \n",
-    "            \"scheduler\": SchedulerCallback(),\n",
-    "            \"checkpoint1\": CheckpointCallback(# TopNMetricHandlerCallback(\n",
-    "                loader_key=\"valid\", metric_key=\"auc\", \n",
-    "                minimize=False, save_n_best=3\n",
-    "            ),\n",
-    "            \"checkpoint2\": CheckpointCallback(# TopNMetricHandlerCallback(\n",
-    "                loader_key=\"valid\", metric_key=\"loss_mean\", \n",
-    "                minimize=True, save_n_best=1\n",
-    "            ),\n",
-    "            \"verbose\": VerboseCallback(),\n",
-    "        }\n",
+    "        if stage == \"stage_1\":\n",
+    "            return {\n",
+    "                \"criterion\": CriterionCallback(), \n",
+    "                \"accuracy\": MetricCallback(\n",
+    "                    metric=AccuracyMetric(), compute_on_batch=True,\n",
+    "                    input_key=\"targets\", output_key=\"logits\"\n",
+    "                ),\n",
+    "                \"optimizer\": OptimizerCallback(), \n",
+    "                \"scheduler\": SchedulerCallback(),\n",
+    "                \"checkpoint_accuracy\": CheckpointCallback(# TopNMetricHandlerCallback(\n",
+    "                    loader_key=\"valid\", metric_key=\"accuracy_mean\", \n",
+    "                    minimize=False, save_n_best=1\n",
+    "                ),\n",
+    "            }\n",
+    "        elif stage == \"stage_2\":\n",
+    "            return {\n",
+    "                \"criterion\": CriterionCallback(), \n",
+    "                \"auc\": MetricCallback(\n",
+    "                    metric=AUCMetric(), compute_on_batch=False,\n",
+    "                    input_key=\"targets\", output_key=\"logits\"\n",
+    "                ), \n",
+    "                \"optimizer\": OptimizerCallback(), \n",
+    "                \"scheduler\": SchedulerCallback(),\n",
+    "                \"checkpoint_auc\": CheckpointCallback(# TopNMetricHandlerCallback(\n",
+    "                    loader_key=\"valid\", metric_key=\"auc\", \n",
+    "                    minimize=False, save_n_best=3\n",
+    "                ),\n",
+    "            }\n",
+    "        else:\n",
+    "            raise NotImplemented()\n",
+    "        \n",
     "\n",
     "    def get_engine(self) -> IEngine:\n",
     "        return Engine()\n",
