dev - arch & naming

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -288,26 +288,27 @@
    },
    "outputs": [],
    "source": [
+    "num_epochs=6\n",
     "model = MLP(2, [16, 16, 1])\n",
     "criterion = MicroCriterion()\n",
-    "optimizer = MicroOptimizer(model)\n",
-    "scheduler = MicroScheduler(optimizer, num_epochs=10)\n",
+    "optimizer = MicroOptimizer(model, lr=1.0)\n",
+    "scheduler = MicroScheduler(optimizer, num_epochs=num_epochs)\n",
     "experiment = SingleStageExperiment(\n",
     "    model=model, \n",
     "    criterion=criterion, \n",
     "    optimizer=optimizer, \n",
     "    scheduler=scheduler,\n",
     "    loaders=loaders, \n",
-    "    num_epochs=6,\n",
+    "    num_epochs=num_epochs,\n",
     "    callbacks={\n",
     "        \"criterion\": CriterionCallback(), \n",
     "        \"accuracy\": MetricCallback(\n",
     "            metric=AccuracyMetric(), compute_on_batch=True,\n",
-    "            input_key=\"targets\", output_key=\"logits\"\n",
+    "            outputs_key=\"logits\", targets_key=\"targets\", \n",
     "        ),\n",
     "        \"auc\": MetricCallback(\n",
     "            metric=AUCMetric(), compute_on_batch=False,\n",
-    "            input_key=\"targets\", output_key=\"logits\"\n",
+    "            outputs_key=\"logits\", targets_key=\"targets\", \n",
     "        ), \n",
     "        \"optimizer\": OptimizerCallback(), \n",
     "        \"scheduler\": SchedulerCallback(),\n",
@@ -377,6 +378,7 @@
     "    buf = io.BytesIO()\n",
     "    fig.savefig(buf, format=\"png\", dpi=dpi)\n",
     "    buf.seek(0)\n",
+    "    \n",
     "    img_arr = np.frombuffer(buf.getvalue(), dtype=np.uint8)\n",
     "    buf.close()\n",
     "    img = cv2.imdecode(img_arr, 1)\n",
@@ -419,27 +421,28 @@
     "    },\n",
     "}\n",
     "stages = loaders.keys()\n",
+    "num_epochs=10\n",
     "\n",
     "model = MLP(2, [16, 16, 1])\n",
     "criterion = MicroCriterion()\n",
-    "optimizer = MicroOptimizer(model)\n",
-    "scheduler = MicroScheduler(optimizer, num_epochs=10)\n",
+    "optimizer = MicroOptimizer(model, lr=1.0)\n",
+    "scheduler = MicroScheduler(optimizer, num_epochs=num_epochs)\n",
     "experiment = CustomExperiment(\n",
     "    model=model, \n",
     "    criterion=criterion, \n",
     "    optimizer=optimizer, \n",
     "    scheduler=scheduler,\n",
     "    loaders=loaders, \n",
-    "    num_epochs=4,\n",
+    "    num_epochs=num_epochs,\n",
     "    callbacks={\n",
     "        \"criterion\": CriterionCallback(), \n",
     "        \"accuracy\": MetricCallback(\n",
     "            metric=AccuracyMetric(), compute_on_batch=True,\n",
-    "            input_key=\"targets\", output_key=\"logits\"\n",
+    "            outputs_key=\"logits\", targets_key=\"targets\", \n",
     "        ),\n",
     "        \"auc\": MetricCallback(\n",
     "            metric=AUCMetric(), compute_on_batch=False,\n",
-    "            input_key=\"targets\", output_key=\"logits\"\n",
+    "            outputs_key=\"logits\", targets_key=\"targets\", \n",
     "        ), \n",
     "        \"optimizer\": OptimizerCallback(), \n",
     "        \"scheduler\": SchedulerCallback(),\n",
@@ -508,7 +511,7 @@
     "\n",
     "    model = MLP(2, [num_hidden1, num_hidden2, 1])\n",
     "    criterion = MicroCriterion()\n",
-    "    optimizer = MicroOptimizer(model)\n",
+    "    optimizer = MicroOptimizer(model, lr=1.0)\n",
     "    scheduler = MicroScheduler(optimizer, num_epochs=num_epochs)\n",
     "\n",
     "    experiment = SingleStageExperiment(\n",
@@ -522,11 +525,11 @@
     "            \"criterion\": CriterionCallback(alpha=l2_alpha), \n",
     "            \"accuracy\": MetricCallback(\n",
     "                metric=AccuracyMetric(), compute_on_batch=True,\n",
-    "                input_key=\"targets\", output_key=\"logits\"\n",
+    "                outputs_key=\"logits\", targets_key=\"targets\", \n",
     "            ),\n",
     "            \"auc\": MetricCallback(\n",
     "                metric=AUCMetric(), compute_on_batch=False,\n",
-    "                input_key=\"targets\", output_key=\"logits\"\n",
+    "                outputs_key=\"logits\", targets_key=\"targets\", \n",
     "            ), \n",
     "            \"optimizer\": OptimizerCallback(), \n",
     "            \"scheduler\": SchedulerCallback(),\n",
@@ -631,9 +634,9 @@
     "\n",
     "    def get_optimizer(self, stage: str, model):\n",
     "        if stage == \"stage_1\":\n",
-    "            return MicroOptimizer(model, lr=1e-3)\n",
+    "            return MicroOptimizer(model, lr=1.0)\n",
     "        elif stage == \"stage_2\":\n",
-    "            return MicroOptimizer(model, lr=1e-4)\n",
+    "            return MicroOptimizer(model, lr=0.01)\n",
     "        else:\n",
     "            raise NotImplemented()\n",
     "\n",
@@ -652,7 +655,7 @@
     "                \"criterion\": CriterionCallback(), \n",
     "                \"accuracy\": MetricCallback(\n",
     "                    metric=AccuracyMetric(), compute_on_batch=True,\n",
-    "                    input_key=\"targets\", output_key=\"logits\"\n",
+    "                    outputs_key=\"logits\", targets_key=\"targets\", \n",
     "                ),\n",
     "                \"optimizer\": OptimizerCallback(), \n",
     "                \"scheduler\": SchedulerCallback(),\n",
@@ -666,7 +669,7 @@
     "                \"criterion\": CriterionCallback(), \n",
     "                \"auc\": MetricCallback(\n",
     "                    metric=AUCMetric(), compute_on_batch=False,\n",
-    "                    input_key=\"targets\", output_key=\"logits\"\n",
+    "                    outputs_key=\"logits\", targets_key=\"targets\", \n",
     "                ), \n",
     "                \"optimizer\": OptimizerCallback(), \n",
     "                \"scheduler\": SchedulerCallback(),\n",
